<resources>
    <string name="app_name">Note Application</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_to_the_noteapp_text">Login To The NoteApp</string>
    <string name="enter_your_email_text">Enter your email</string>
    <string name="enter_your_password_text">Enter your password</string>
    <string name="have_no_account_register_here_text">Have no account? Register Here!</string>
    <string name="login_text">Login</string>
    <string name="welcome_text">Welcome, User!</string>
    <string name="noteapp_by_ara_gamaliel_text">NoteApp</string>
    <string name="create_your_note_here_text">Create your note here.</string>
    <string name="logout_text">Logout</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_login_here">Already have an account? Login here</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="enter_your_username_text">Enter your username</string>
    <string name="plus_text">+</string>
    <string name="created_at">Created at:</string>
    <string name="hello_it_s_me">Hello, It\'s me!</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc lobortis fringilla ante, et sagittis libero condimentum vitae. Integer augue tortor, convallis quis bibendum sit amet, ullamcorper eu arcu. In hac habitasse platea dictumst. Interdum et malesuada fames ac ante ipsum primis in faucibus. Duis sit amet laoreet lorem. Quisque sed nisl nec ipsum tempor sodales sed non nulla. Aenean eget est non tellus sollicitudin blandit. Cras ac magna felis. Quisque mattis a erat eget convallis. Nunc eu leo at justo viverra finibus. Phasellus rutrum libero massa. Nunc id sollicitudin mi. Nunc blandit arcu iaculis velit vestibulum, at molestie lacus elementum.</string>
    <string name="hello_world_this_is_a_note">Hello World! This is A Note</string>
</resources>