<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/loginText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_to_the_noteapp_text"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:textSize="25sp"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/loginText"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/enter_your_email_text"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/enterEmail"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="10dp"
        android:hint="@string/enter_your_password_text"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginHorizontal="100dp"
        android:layout_marginBottom="100dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/have_no_account_register_here_text"
        android:textColor="@color/purple_200"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>